<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUpActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_create_account"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:textAlignment="center"
        android:textColor="@color/colorError"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_create_account" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/title_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_message" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/title_password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <EditText
        android:id="@+id/editText_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/title_confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/title_sign_up"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_confirm_password"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/title_sign_in"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_or"
        app:layout_constraintVertical_bias="0.204" />

</androidx.constraintlayout.widget.ConstraintLayout>